# everypay-mock

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
banking/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
banking/migrations/: 0001_initial.py
config/: settings.py  urls.py
oauth/: admin.py  auth.py  models.py  services.py  tests.py  urls.py  views.py
oauth/migrations/: 0001_initial.py
templates/oauth/: authorize.html
