[project]
name = "everypay-mock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.5",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "django-modern-rest[jwt]>=0.10.0",
    "django-oauth-toolkit>=3.3.0",
    "jwt>=1.4.0",
    "psycopg>=3.3.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pyjwt>=2.8.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.15",
]
